[project]
name = "travel-serp-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.43.1",
    "grandalf>=0.8",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
    "serpapi>=0.1.5",
    "streamlit>=1.48.1",
]
